--- a/.gitignore
+++ b/.gitignore
@@ -1,20 +1,28 @@
-#확장자가 .class인 파일은 무시합니다.
+# Compiled class file
 *.class
 
-#.class 파일들은 모두 무시되지만, HelloWorld.class만큼은 무시하지 않습니다.
-!HelloWorld.class
+# Log file
+*.log
 
-#현재 디렉터리에 있는 /Test.java 파일은 무시되지만,
-#subDir/Test.java 같이 특정 디렉터리 하위에 있는 Test.java는 무시되지 않습니다.
-/Test.java
+# BlueJ files
+*.ctxt
 
-#target/ 디렉터리에 있는 모든 파일 무시합니다.
-target/
+# Mobile Tools for Java (J2ME)
+.mtj.tmp/
 
-#src/ 하위의 .java 파일은 무시되지만 /src/main/ 하위의 .java 파일은 무시되지 않습니다.
-src/*.java
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
 
-#src/ 하위에 존재하는 모든 디렉터리의 .txt 파일을 무시합니다.
-src/**/*.txt
+# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
+hs_err_pid*
+/bin/
 
-
+# intellij
+.idea
+*.iml
